# social-blogging-app

./: README.md
backend/: package-lock.json  package.json
backend/src/: server.js
backend/src/config/: db.js
backend/src/controllers/: auth.js  posts.js
backend/src/middleware/: auth.js  authMiddleware.js  upload.js
backend/src/models/: Post.js  User.js  post.js
backend/src/routes/: auth.js  postRoutes.js
chatbot-api/: .dockerignore  .env.example  Dockerfile  README.md  main.py  pyproject.toml  test_output_format.py  test_trend_writer.py  todo.txt
chatbot-api/ai/: blog_rag_tool.py  crew.py  rag_system.py  tools.py
chatbot-api/ai/config/: agents.yaml  tasks.yaml
chatbot-api/chroma_db/: chroma.sqlite3
chatbot-api/scripts/: test_embeddings.py
frontend/blog-project/: index.html  package-lock.json  package.json
frontend/blog-project/src/: App.jsx  main.jsx
frontend/blog-project/src/components/: ChatbotWidget.jsx  ConfirmationModal.jsx  EditPost.jsx  NewPost.jsx  chatbot.jsx  dashboard.jsx  navBar.jsx  sideBar.jsx
frontend/blog-project/src/context/: AuthContext.jsx  SideBarContext.jsx
frontend/blog-project/src/pages/: AllPosts.jsx  CreatePost.jsx  EditPost.jsx  MyPosts.jsx  PostDetails.jsx  ProfilePictureUploader.jsx  homePage.jsx  loginPage.jsx  myPostPage.jsx  resetPasswordPage.jsx  signupPage.jsx  welcomePage.jsx
