[project]
name = "social-bot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "crewai[tools]>=0.152.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.31.0",
    "tavily-python>=0.7.10",
    "chromadb>=0.5.0",
    "langchain>=0.3.0",
    "langchain-google-genai>=2.0.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
    "pymongo>=4.0.0",
]
